--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -247,7 +247,8 @@
             var phone = $.trim($("#act-phone").val());
             var country = $('.act-pop-sel-val').attr('data-id');
             var city = cookie('currentarea');
-            var h = window.location.href;
+            // var h = window.location.href;
+            var h = cookie('referweb'); // 获取来源url
             var grUserId = cookie('gr_user_id');
             if(actName== ''){
                 layer.msg('请输入姓名');
