--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -75,8 +75,11 @@
   </div>
 </div>#}
 <script src="http://jesong.jjl.cn/js/jjl.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/publicParamSubOrther.js"></script>
 <script>
   function  openchat_new(jobnum){
+    var grUserId = cookie('gr_user_id');
+    getUrlSetCookieByParam ('growingioId',grUserId);
     openJesongChatByCus(1,jobnum)
   }
 </script>
