--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -88,7 +88,7 @@
 <script src="{{helper.cdnhost}}/dep/js/publicParamSubOrther.js"></script>
 <script>
 $(function(){
-    var grUserId = $.cookie('gr_user_id');
+    var grUserId = cookie('gr_user_id');
     getUrlSetCookieByParam ('growingioId',grUserId);
 })
 </script>
