--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -309,10 +309,10 @@
 <!-- 学校简介 -->
 <div class="dui-layout-lg" style="margin-top: 50px;">
     <div class="jie clearfix">
-        <img src="" alt="">
+        <img src="{{schooltopic.list.sch_introduce_map}}" alt="">
         <div class="jie_rigth">
             <div class="jie_rigth_title"></div>
-            <div class="jie_rigth_con">学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介</div>
+            <div class="jie_rigth_con">{{schooltopic.list.content}}</div>
         </div>
     </div>
 </div>
@@ -320,21 +320,26 @@
 <div class="dui-layout-lg" style="margin-top: 50px;">
     <div class="you_title"></div>
     <div class="you_con clearfix">
-        <div class="you_con_le">
-            <div class="you_con_le_"><i class="you_con_le_dian"></i><span style="color: #c13232">性价比高：</span></span><span>优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍优势介绍</span></div>
+        <div class="you_con_le" style="overflow-y: scroll;overflow-x: hidden;height: 240px;">
+            {% for item in advantage %}
+            <div class="you_con_le_">
+                <i class="you_con_le_dian"></i><!--<span style="color: #c13232">性价比高：</span></span>-->
+                <span>{{item}}</span>
+            </div><br/>
+            {% endfor %}
         </div>
-        <img src="" alt="">
+        <img src="{{schooltopic.list.advantage_map}}" alt="">
     </div>
 </div>
 <script>
     $(function () {
         //轮播图初始化
-        // var mySwiper = new Swiper ('.swiper-container', {
-        //     loop: true,
-        //     nextButton: '.swiper-button-next',
-        //     prevButton: '.swiper-button-prev',
-        //     autoplay : 5000,
-        // });
+        var mySwiper = new Swiper ('.swiper-container', {
+            loop: true,
+            nextButton: '.swiper-button-next',
+            prevButton: '.swiper-button-prev',
+            autoplay : 5000,
+        });
     });
         function onshow(id) {
             var addEvent = function(element,type,callback){
@@ -385,46 +390,20 @@
 <div class="dui-layout-lg" style="margin-top: 50px;">
     <div class="kai_title"></div>
     <div class="branch-expert-lunbo" style="width:1200px;position: relative;height:270px;">
-        <a class="arrow-left arrow-btn" href="javacript:void(0);" style="display:block;"></a>
-        <a class="arrow-right arrow-btn" href="javacript:void(0);" style="display:block;"></a>
+        <a class="arrow-left arrow-btn" href="javascript:void(0);" style="display:block;"></a>
+        <a class="arrow-right arrow-btn" href="javascript:void(0);" style="display:block;"></a>
         <div class="swiper-container" style="width:1055px;margin: 0 auto;height:270px;">
             <div class="swiper-wrapper">
                 <div class="swiper-slide clearfix">
-            {% for item in sliderArr %}
-                <div class="swiper-slide canzan-slide" >
+            {% for init in coures %}
+                <div class="canzan-slide" {% if loop.index % 4 == 0 %} style="margin-right: 0px;" {% endif %}onmousemove="onshow('{{loop.index}}');" onmouseout="onhide('{{loop.index}}');">
                     <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                    </a>
-                </div>
-            {% endfor %}
-                <div class="canzan-slide" onmousemove="onshow('1');" onmouseout="onhide('1');">
-                    <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                        <div id="kai_con_1" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程......</div>
+                        <img src="{{ init.images.url }}" alt="{{ init.images.alt }}"/>
+                        <div id="kai_con_1" class="kai_con" style="display:block;" data-des="{{init.des}}">{{init.des}}......</div>
                         <div id="kai_con_chang_1" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
                     </a>
                 </div>
-                <div class="canzan-slide" onmousemove="onshow('2');" onmouseout="onhide('2');">
-                    <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                        <div id="kai_con_2" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程......</div>
-                        <div id="kai_con_chang_2" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
-                    </a>
-                </div>
-                <div class="canzan-slide" onmousemove="onshow('3');" onmouseout="onhide('3');">
-                    <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                        <div id="kai_con_3" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程......</div>
-                        <div id="kai_con_chang_3" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
-                    </a>
-                </div>
-                <div class="canzan-slide" style="margin-right: 0px;" onmousemove="onshow('4');" onmouseout="onhide('4');">
-                    <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                        <div id="kai_con_4" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程......</div>
-                        <div id="kai_con_chang_4" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
-                    </a>
-                </div>
+            {% endfor %}
                 </div>
             </div>
         </div>
@@ -436,15 +415,15 @@
     <div class="clearfix" style="width:1200px;margin: 0 auto;">
         <div class="xue_con">
             <div class="xue_con_title"></div>
-            <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
+            <div class="xue_con_con">{{schooltopic.list.tuition_info}}</div>
         </div>
         <div class="xue_con">
             <div class="xue_con_title2"></div>
-            <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
+            <div class="xue_con_con">{{schooltopic.list.scholarship_info}}</div>
         </div>
         <div class="xue_con" style="margin-right: 0px;">
             <div class="xue_con_title"></div>
-            <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
+            <div class="xue_con_con">{{schooltopic.list.apply_advantage}}</div>
         </div>
     </div>
 </div>
