--- a/views/about/colleges.html
+++ b/views/about/colleges.html
@@ -512,16 +512,16 @@
     <div class="jian_title">学校简介</div>
     <div class="jian_con">
         <div class="jian_con_top">
-            <div class="jian_con_top_s">学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介学校简介</div>
+            <div class="jian_con_top_s">{{schooltopic.list.description}}</div>
         </div>
         <div class="jian_con_rigth">
-            <img src="" alt="">
+            <img src="{{schooltopic.list.des_images}}" alt="">
         </div>
         <div class="jian_con_bottom clearfix">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="{{schooltopic.list.ranking_images}}" alt="">
+            <img src="{{schooltopic.list.ranking_images}}" alt="">
+            <img src="{{schooltopic.list.ranking_images}}" alt="">
+            <img src="{{schooltopic.list.ranking_images}}" alt="">
         </div>
     </div>
 </div>
