--- a/views/data_center.html
+++ b/views/data_center.html
@@ -53,6 +53,10 @@
             height: 30px;
             text-align: center;
             line-height: 30px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            display: inline-block;
         }
         .data-table th:first-of-type,.data-table td:first-of-type {
             width: 108px;
