--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -33,7 +33,7 @@
     <div style="width: 708px;float: left;padding-left: 20px">
       <div class="foot-map clearfix" style="width: 708px;">
         <div class="sitemap sitemap01">
-          <h2>关于金吉列</h2>
+          <h2>关于我们</h2>
           <ul class="left-ul">
             <li><a target="_blank"  rel="nofollow"  href="{{ helper.urlgen('about') }}"> 公司简介</a></li>
             <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/culture') }}">企业文化</a></li>
