--- a/views/widget/new_nav_first/yimin_nav.html
+++ b/views/widget/new_nav_first/yimin_nav.html
@@ -6,7 +6,7 @@
         </div>
         <ul class="page-type">
             <li class="type-nav small-nav {{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
-            <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE' or tdk.pagekey == 'CULTURE' or tdk.pagekey == 'EVENTS' or tdk.pagekey == 'COOPERATION' or tdk.pagekey == 'CONTACT'}}"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
+            <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE' or tdk.pagekey == 'CULTURE' or tdk.pagekey == 'EVENTS' or tdk.pagekey == 'COOPERATION' or tdk.pagekey == 'CONTACT'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-searchs new-home-search">
